--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
 version: 1.0.0+1
+# isar_version: &isar_version 3.1.8 # define the version to be used
 
 environment:
   sdk: ^3.5.0
@@ -35,6 +36,23 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  freezed: ^2.5.7
+  # isar: 3.1.0+1
+  # isar_flutter_libs: 3.1.0+1
+  # path_provider: ^2.1.5
+  # isar: ^2.1.4
+  # isar_flutter_libs: ^2.1.4
+  # path_provider: ^2.0.15
+  # isar: 4.0.0  
+  # isar_flutter_libs: 4.0.0 # contains Isar Core
+  isar: 
+    version: 3.1.8
+    hosted: https://pub.isar-community.dev/
+  isar_flutter_libs: # contains Isar Core
+    version: 3.1.8
+    hosted: https://pub.isar-community.dev/
+  flutter_bloc: ^8.1.6
+  path_provider:
 
 dev_dependencies:
   flutter_test:
@@ -46,6 +64,15 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
+  riverpod_generator: ^2.6.2
+  build_runner: ^2.4.13
+  custom_lint: ^0.7.0
+  riverpod_lint: ^2.6.2
+  json_serializable: ^6.8.0
+  isar_generator: 
+    version: 3.1.8
+    hosted: https://pub.isar-community.dev/
+  
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
