--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
     hosted: https://pub.isar-community.dev/
   flutter_bloc: ^8.1.6
   path_provider:
+  freezed_annotation: ^2.4.4
 
 dev_dependencies:
   flutter_test:
