--- a/packages/todos/pubspec.yaml
+++ b/packages/todos/pubspec.yaml
@@ -12,9 +12,10 @@ dependencies:
   errors:
     path: ../errors
   network_info:
-    path: ../network_info  
+    path: ../network_info
   freezed_annotation: ^2.4.4
-  json_annotation: ^4.8.0
+  # json_annotation: ^4.8.0
+  json_annotation: ^4.9.0
   fpdart:  
   sqflite:
   isar: 
@@ -31,12 +32,16 @@ dependencies:
   # connectivity_plus: ^3.0.3
   
 dev_dependencies:
-  lints: ^4.0.0
+  lints: ^5.0.0
   test: ^1.24.0
   freezed: ^2.5.7
   json_serializable: ^6.8.0
   isar_generator: 
     version: 3.1.8
     hosted: https://pub.isar-community.dev/
+  riverpod_generator: ^2.6.2
+  riverpod_lint: ^2.6.2
+  build_runner: ^2.4.13
+  custom_lint: ^0.7.0
 
 
